--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Universal Link Demo</title>
+  <title>Redirecting...</title>
 </head>
 <body>
-  <h1>Welcome to the Universal Link Demo!</h1>
-  <p>Check out the link at <a href="/.well-known/apple-app-site-association">apple-app-site-association</a></p>
+  <p>Đang chuyển hướng về app...</p>
+
+  <script>
+    // Lấy tham số từ URL
+    const urlParams = new URLSearchParams(window.location.search);
+    const code = urlParams.get('code');
+    const state = urlParams.get('state') || '';
+
+    // Kiểm tra nếu code có trong URL
+    if (!code) {
+      alert('Missing code');
+      throw new Error('Missing code');
+    }
+
+    // Tạo URL của app để chuyển hướng
+    const redirectUrl = `viralviewscheme://login?code=${code}&state=${state}`;
+    
+    // Thực hiện chuyển hướng đến URL của app
+    window.location.href = redirectUrl;
+  </script>
 </body>
 </html>
