--- a/public/auth/tiktok/oauth/index.html
+++ b/public/auth/tiktok/oauth/index.html
@@ -12,15 +12,16 @@
     const urlParams = new URLSearchParams(window.location.search);
     const code = urlParams.get('code');
     const state = urlParams.get('state') || '';
-
+    console.log(code, state);
     if (!code) {
       alert('Missing code');
       throw new Error('Missing code');
     }
 
     const redirectUrl = `viralviewscheme://login?code=${code}&state=${state}`;
-    
+    console.log(redirectUrl);
     window.location.href = redirectUrl;
+    console.log(window.location.href);
   </script>
 </body>
 </html>
