--- a/public/auth/tiktok/oauth/index.html
+++ b/public/auth/tiktok/oauth/index.html
@@ -19,7 +19,7 @@
 
     const redirectUrl = `viralviewscheme://login?code=${code}&state=${state}`;
     
-    window.location.href = redirectUrl;
+    window.location.replace(redirectUrl);
   </script>
 </body>
 </html>
