--- a/public/auth/tiktok/oauth/index.html
+++ b/public/auth/tiktok/oauth/index.html
@@ -17,7 +17,7 @@
       throw new Error('Missing code');
     }
 
-    const redirectUrl = `viralviewscheme://login?code=${code}&state=${state}`;
+    const redirectUrl = `viralviewscheme://login?code=${encodeURIComponent(code)}&state=${encodeURIComponent(state)}`;
     
     window.location.replace(redirectUrl);
   </script>
